fixed the user menu by adding z-index value

--- a/public/css/mainar.css
+++ b/public/css/mainar.css
@@ -179,6 +179,7 @@ div.wrapper header.main div.user_menu_container ul.user_menu {
     box-shadow: 0 1px 5px 0 rgba(56,61,72,0.21);
     width: 140px;
     display: none;
+    z-index: 1;
 }
 
 div.wrapper header.main div.user_menu_container ul.user_menu::before {
