--- a/public/css/mainen.css
+++ b/public/css/mainen.css
@@ -178,6 +178,7 @@ div.wrapper header.main div.user_menu_container ul.user_menu {
     box-shadow: 0 1px 5px 0 rgba(56,61,72,0.21);
     width: 150px;
     display: none;
+    z-index: 1;
 }
 
 div.wrapper header.main div.user_menu_container ul.user_menu::before {
